horizontal scrollbar fix

--- a/client/app/styles/main.css
+++ b/client/app/styles/main.css
@@ -82,7 +82,10 @@ input::-webkit-slider-thumb {
   border-radius: 4px;
   border-width: 2px 2px 2px 0px;
   min-height: 28px;
-  /*box-shadow: inset 1px 1px 0 rgba(0,0,0,.1),inset 0 -1px 0 rgba(0,0,0,.07);*/
+}
+
+::-webkit-scrollbar-thumb:horizontal {
+  border-width: 0px 2px 2px 2px;
 }
 
 ::-webkit-scrollbar-button {
